# FileChatAI

./: QUICK_START.md  README.md  app.py  chat_handler.py  document_processor.py  local_requirements_minimal.txt  pyproject.toml  replit.md  run_local.py  setup_and_run.py  vector_store.py
