[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "streamlit>=1.47.0",
]
